[REFACTOR] refactor deep link service logic to use custom scheme instead of https scheme

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -25,22 +25,12 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
             
-            <!-- Deep Links for email verification -->
-            <intent-filter android:autoVerify="true">
+            <!-- Custom Deep Link Scheme for the app -->
+            <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                
-                <!-- Handle Firebase Auth verification links -->
-                <data
-                    android:scheme="https"
-                    android:host="*.firebaseapp.com"
-                    android:pathPattern="/__/auth/action.*" />
-                
-                <!-- Custom Deep Link Scheme for the app -->
-                <data 
-                    android:scheme="pockeat" 
-                    android:host="verify" />
+                <data android:scheme="pockeat" />
             </intent-filter>
         </activity>
         <!-- Don't delete the meta-data below.
