--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- Health Connect Permissions -->
+    <uses-permission android:name="android.permission.health.READ_STEPS"/>
+    <uses-permission android:name="android.permission.health.WRITE_STEPS"/>
+    <!-- Add more health permissions as needed, such as: -->
+    <!-- <uses-permission android:name="android.permission.health.READ_HEART_RATE"/> -->
+    <!-- <uses-permission android:name="android.permission.health.READ_SLEEP"/> -->
+    <!-- <uses-permission android:name="android.permission.health.READ_WEIGHT"/> -->
+    
     <application
         android:label="pockeat"
         android:name="${applicationName}"
@@ -31,15 +39,16 @@
             android:name="flutterEmbedding"
             android:value="2" />
     </application>
-    <!-- Required to query activities that can process text, see:
-         https://developer.android.com/training/package-visibility and
-         https://developer.android.com/reference/android/content/Intent#ACTION_PROCESS_TEXT.
-
-         In particular, this is used by the Flutter engine in io.flutter.plugin.text.ProcessTextPlugin. -->
+    
+    <!-- Queries section - combine the existing query with Health Connect -->
     <queries>
+        <!-- Existing query for text processing -->
         <intent>
             <action android:name="android.intent.action.PROCESS_TEXT"/>
             <data android:mimeType="text/plain"/>
         </intent>
+        
+        <!-- Health Connect query -->
+        <package android:name="com.google.android.apps.healthdata" />
     </queries>
 </manifest>
