--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,8 @@ dependencies:
   test_cov_console: ^0.2.2
   fake_cloud_firestore: ^3.1.0
   http: ^1.3.0
+  health_connect: ^1.0.0  
+  permission_handler: ^10.2.0  
 
 dev_dependencies:
   flutter_test:
