--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   cloud_firestore: ^5.6.3
   firebase_storage: ^12.4.2
   uuid: ^4.5.1
-  camera: ^0.10.0+1
+  camera: ^0.11.1
   mockito: ^5.0.0
   provider: ^6.1.1
   google_generative_ai: ^0.4.6
@@ -55,8 +55,10 @@ dependencies:
   test_cov_console: ^0.2.2
   fake_cloud_firestore: ^3.1.0
   http: ^1.3.0
-  health_connect: ^1.0.0  
-  permission_handler: ^10.2.0  
+  health: ^12.1.0
+  permission_handler: ^11.4.0  
+  fl_chart: ^0.70.2
+  android_intent_plus: ^5.3.0
 
 dev_dependencies:
   flutter_test:
