--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   permission_handler: ^11.4.0  
   fl_chart: ^0.70.2
   android_intent_plus: ^5.3.0
+  device_info_plus: ^11.3.3
 
 dev_dependencies:
   flutter_test:
