--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,12 +58,13 @@ dependencies:
   fake_cloud_firestore: ^2.5.2
   http: ^1.3.0
   health: ^12.1.0
-  permission_handler: ^11.4.0  
+  permission_handler: ^11.4.0
   fl_chart: ^0.70.2
   android_intent_plus: ^5.3.0
   device_info_plus: ^10.1.2
   app_links: ^3.4.3
   meta: ^1.15.0
+  google_sign_in: ^6.2.1
 
 dev_dependencies:
   flutter_test:
