[RED] Add tests for google sign in trigger cloud functions

--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -2,23 +2,23 @@ name: Development CI
 
 on:
   push:
-    branches: ['PBI-*']
+    branches: ["PBI-*"]
 
 jobs:
   test:
     name: Tests & Analysis
     runs-on: ubuntu-latest
-    
+
     steps:
       - uses: actions/checkout@v4
 
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.29.0'
-          channel: 'stable'
+          flutter-version: "3.29.0"
+          channel: "stable"
           cache: true
-      
+
       - name: Create .env file
         run: |
           echo "FLAVOR=dev" > .env
@@ -37,51 +37,67 @@ jobs:
 
       - name: Get dependencies
         run: flutter pub get
-        
+
       - name: Generate mocks with build_runner
         run: flutter pub run build_runner build --delete-conflicting-outputs
-              
+
       - name: Run Flutter Analyze for Report
         run: |
           mkdir -p analysis-results
           flutter analyze --no-fatal-warnings --no-fatal-infos > analysis-results/flutter-analyze.txt || true
-          
+
       - name: Install junitreport for test results
         run: dart pub global activate junitreport
-        
+
       - name: Run tests with coverage and generate JUnit report
         run: |
           mkdir -p test-results
           flutter test --coverage --machine | tee test_output.json
           dart pub global run junitreport:tojunit --input test_output.json --output test-results/junit_flutter_tests.xml
-          
+
       - name: Prepare coverage report
         run: |
           mkdir -p coverage/combined
           cp coverage/lcov.info coverage/combined/lcov.info
-        
+
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           file: ./coverage/combined/lcov.info
           fail_ci_if_error: true
-      
+
       - name: Upload test results to Codecov
         if: ${{ !cancelled() }}
         uses: codecov/test-results-action@v1
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           file: test-results/junit_flutter_tests.xml
-          
+
       - name: Display Codecov link
         run: |
           BRANCH_NAME="${GITHUB_REF#refs/heads/}"
           REPO_NAME="${{ github.repository }}"
           echo "Code Coverage Report: https://codecov.io/gh/${REPO_NAME}/branch/${BRANCH_NAME}"
-          
+
       - name: Run Flutter Test for CI Failure
         run: flutter test
-          
+
       - name: Run Flutter Analyze for CI Failure
         run: flutter analyze --no-fatal-warnings --no-fatal-infos
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "22"
+          cache: "npm"
+
+      - name: Test Firebase Functions
+        run: |
+          if [ -d "functions" ]; then
+            cd functions
+            npm install
+            npm test
+          else
+            echo "Functions folder not found, skipping tests"
+          fi
