--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -10,17 +10,17 @@ jobs:
   test:
     name: Tests & Analysis
     runs-on: ubuntu-latest
-    
+
     steps:
       - uses: actions/checkout@v4
 
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.29.0'
-          channel: 'stable'
+          flutter-version: "3.29.0"
+          channel: "stable"
           cache: true
-      
+
       - name: Create .env file
         run: |
           echo "FLAVOR=staging" > .env
@@ -39,43 +39,43 @@ jobs:
 
       - name: Get dependencies
         run: flutter pub get
-        
+
       - name: Generate mocks with build_runner
         run: flutter pub run build_runner build --delete-conflicting-outputs
-        
+
       - name: Run Flutter Analyze for Report
         run: |
           mkdir -p analysis-results
           flutter analyze --no-fatal-warnings --no-fatal-infos > analysis-results/flutter-analyze.txt || true
-          
+
       - name: Install junitreport for test results
         run: dart pub global activate junitreport
-        
+
       - name: Run tests with coverage and generate JUnit report
         run: |
           mkdir -p test-results
           flutter test --coverage --machine | tee test_output.json
           dart pub global run junitreport:tojunit --input test_output.json --output test-results/junit_flutter_tests.xml
-          
+
       - name: Prepare coverage report
         run: |
           mkdir -p coverage/combined
           cp coverage/lcov.info coverage/combined/lcov.info
-        
+
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           file: ./coverage/combined/lcov.info
           fail_ci_if_error: true
-      
+
       - name: Upload test results to Codecov
         if: ${{ !cancelled() }}
         uses: codecov/test-results-action@v1
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           file: test-results/junit_flutter_tests.xml
-          
+
       - name: Display Codecov link
         run: |
           BRANCH_NAME="${GITHUB_REF#refs/heads/}"
@@ -84,29 +84,45 @@ jobs:
           fi
           REPO_NAME="${{ github.repository }}"
           echo "Code Coverage Report: https://codecov.io/gh/${REPO_NAME}/branch/${BRANCH_NAME}"
-          
+
       - name: Run Flutter Test for CI Failure
         run: flutter test
-          
+
       - name: Run Flutter Analyze for CI Failure
         run: flutter analyze --no-fatal-warnings --no-fatal-infos
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "22"
+          cache: "npm"
+
+      - name: Test Firebase Functions
+        run: |
+          if [ -d "functions" ]; then
+            cd functions
+            npm install
+            npm test
+          else
+            echo "Functions folder not found, skipping tests"
+          fi
 
   build:
     name: Build Debug APK
     needs: test
-    if: ${{ success() }}  # Memastikan build hanya dijalankan jika test sukses
+    if: ${{ success() }} # Memastikan build hanya dijalankan jika test sukses
     runs-on: ubuntu-latest
-    
+
     steps:
       - uses: actions/checkout@v4
-      
+
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.29.0'
-          channel: 'stable'
+          flutter-version: "3.29.0"
+          channel: "stable"
           cache: true
-          
+
       - name: Create .env file
         run: |
           echo "FLAVOR=staging" > .env
@@ -122,13 +138,13 @@ jobs:
           echo "STAGING_FIREBASE_WEB_APP_ID=${{ secrets.STAGING_FIREBASE_WEB_APP_ID }}" >> .env
           echo "STAGING_FIREBASE_WEB_API_KEY=${{ secrets.STAGING_FIREBASE_WEB_API_KEY }}" >> .env
           echo "STAGING_FIREBASE_AUTH_DOMAIN=${{ secrets.STAGING_FIREBASE_AUTH_DOMAIN }}" >> .env
-      
+
       - name: Get dependencies
         run: flutter pub get
-        
+
       - name: Build Debug APK
         run: flutter build apk --profile
-        
+
       - name: Upload Debug APK
         uses: actions/upload-artifact@v4
         with:
