--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -150,11 +150,16 @@ jobs:
       - name: Get dependencies
         run: flutter pub get
 
-      # Setup keystore SEBELUM build
+      # Setup Google Services JSON
+      - name: Setup Google Services JSON
+        run: |
+          echo '${{ secrets.PRODUCTION_GOOGLE_SERVICES_JSON }}' > android/app/google-services.json
+
+      # Setup keystore
       - name: Setup keystore
         run: |
           echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > android/app/keystore.jks
-          echo "storeFile=keystore.jks" >> android/key.properties
+          echo "storeFile=keystore.jks" > android/key.properties
           echo "storePassword=${{ secrets.KEYSTORE_PASSWORD }}" >> android/key.properties
           echo "keyAlias=upload" >> android/key.properties
           echo "keyPassword=${{ secrets.KEYSTORE_PASSWORD }}" >> android/key.properties
