--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -112,11 +112,16 @@ jobs:
       - name: Generate mocks with build_runner
         run: flutter pub run build_runner build --delete-conflicting-outputs
 
+      # Setup Google Services JSON
+      - name: Setup Google Services JSON
+        run: |
+          echo '${{ secrets.PRODUCTION_GOOGLE_SERVICES_JSON }}' > android/app/google-services.json
+
       # Setup keystore
       - name: Setup keystore
         run: |
           echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > android/app/keystore.jks
-          echo "storeFile=keystore.jks" >> android/key.properties
+          echo "storeFile=keystore.jks" > android/key.properties
           echo "storePassword=${{ secrets.KEYSTORE_PASSWORD }}" >> android/key.properties
           echo "keyAlias=upload" >> android/key.properties
           echo "keyPassword=${{ secrets.KEYSTORE_PASSWORD }}" >> android/key.properties
