--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Create .env file
         run: |
           echo "FLAVOR=dev" > .env
-          echo "GOOGLE_GEMINI_API_KEY=${{ secrets.STAGING_GOOGLE_GEMINI_API_KEY }}" >> .env
+          echo "API_BASE_URL=${{ secrets.API_BASE_URL }}" >> .env
           echo "STAGING_FIREBASE_PROJECT_ID=${{ secrets.STAGING_FIREBASE_PROJECT_ID }}" >> .env
           echo "STAGING_FIREBASE_MESSAGING_SENDER_ID=${{ secrets.STAGING_FIREBASE_MESSAGING_SENDER_ID }}" >> .env
           echo "STAGING_FIREBASE_STORAGE_BUCKET=${{ secrets.STAGING_FIREBASE_STORAGE_BUCKET }}" >> .env
