RED: reimplement sync fitness tracker but failed testing

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -56,6 +56,11 @@ flutter {
     source = "../.."
 }
 
+repositories {
+    google()
+    mavenCentral()
+}
+
 dependencies {
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.4'
 }
