--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -16,10 +16,10 @@
         </intent>
     </queries>
     
-    <!-- Required Health Connect permissions -->
+    <!-- Required Health Connect permissions - READ only -->
     <uses-permission android:name="android.permission.health.READ_STEPS"/>
     <uses-permission android:name="android.permission.health.READ_TOTAL_CALORIES_BURNED"/>
-    <uses-permission android:name="android.permission.health.READ_ACTIVE_ENERGY_BURNED"/>
+    <uses-permission android:name="android.permission.health.READ_ACTIVE_CALORIES_BURNED"/>
     
     <!-- Activity recognition permission (needed for steps) -->
     <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION"/>
