--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   device_info_plus: ^10.1.2
   app_links: ^3.4.3
   meta: ^1.15.0
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
