--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,8 @@ dependencies:
   app_links: ^3.4.3
   meta: ^1.15.0
   google_sign_in: ^6.2.1
+  share_plus: ^7.2.1
+  path_provider: ^2.1.1
 
 dev_dependencies:
   flutter_test:
@@ -87,6 +89,7 @@ dev_dependencies:
 flutter:
   assets:
     - assets/images/
+    - assets/icons/
     - .env
 
   # The following line ensures that the Material Icons font is
