--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.28.x'  # Specify Flutter version as needed
+          flutter-version: '3.29.0'  # Specify Flutter version as needed
           channel: 'stable'
           cache: true
 
