--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
   shared_preferences: ^2.5.3
   share_plus: ^7.2.1
   path_provider: ^2.1.1
+  instabug_flutter: ^14.1.0
 
 dev_dependencies:
   flutter_test:
