--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ dependencies:
   path_provider: ^2.1.1
   instabug_flutter: ^14.1.0
   home_widget: ^0.7.0
+  workmanager: ^0.5.2
 
 dev_dependencies:
   flutter_test:
