--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ dependencies:
   share_plus: ^7.2.1
   path_provider: ^2.1.1
   instabug_flutter: ^14.1.0
+  lottie: ^3.3.1
 
 dev_dependencies:
   flutter_test:
@@ -91,6 +92,7 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - assets/animations/
     - .env
 
   # The following line ensures that the Material Icons font is
