--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -5,6 +5,7 @@ plugins {
     // // END: FlutterFire Configuration
     id "kotlin-android"
     id "dev.flutter.flutter-gradle-plugin"
+    id 'com.google.firebase.firebase-perf' version '1.4.2' apply false
 }
 
 def keystoreProperties = new Properties()
@@ -73,6 +74,12 @@ dependencies {
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.4'
     // Add support for older Flutter plugin registration API
     implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.1.0'
+    // Import the BoM for the Firebase platform
+    implementation(platform("com.google.firebase:firebase-bom:33.12.0"))
+
+    // Add the dependency for the Performance Monitoring library
+    // When using the BoM, you don't specify versions in Firebase library dependencies
+    implementation("com.google.firebase:firebase-perf")
     
     // WorkManager dependencies - memaksa versi yang sama
     implementation 'androidx.work:work-runtime:2.8.1'
