[REFACTOR] add DetailedFoodTrackingWidgetProvider as variant for tracking widget which is detailed food tracking that include  nutrition progress per day

--- a/firebase.json
+++ b/firebase.json
@@ -1,43 +1,1 @@
-{
-  "flutter": {
-    "platforms": {
-      "android": {
-        "default": {
-          "projectId": "staging-pockeat",
-          "appId": "1:350090383584:android:f2828874805d58473f0085",
-          "fileOutput": "android/app/google-services.json"
-        }
-      },
-      "dart": {
-        "lib/firebase_options.dart": {
-          "projectId": "staging-pockeat",
-          "configurations": {
-            "android": "1:350090383584:android:f2828874805d58473f0085",
-            "ios": "1:350090383584:ios:63bae819259c04763f0085",
-            "macos": "1:350090383584:ios:4cb7cdfacda9f5203f0085",
-            "web": "1:350090383584:web:7c334a163a4379bc3f0085",
-            "windows": "1:350090383584:web:e4631bbbcda1604c3f0085"
-          }
-        }
-      }
-    }
-  },
-  "firestore": {
-    "rules": "firestore.rules",
-    "indexes": "firestore.indexes.json"
-  },
-  "emulators": {
-    "auth": {
-      "port": 9099
-    },
-    "firestore": {
-      "port": 8080,
-      "rules": "firestore.rules"
-    },
-    "ui": {
-      "enabled": true,
-      "port": 4000
-    },
-    "singleProjectMode": true
-  }
-}
+{"flutter":{"platforms":{"android":{"default":{"projectId":"staging-pockeat","appId":"1:350090383584:android:f2828874805d58473f0085","fileOutput":"android/app/google-services.json"}},"dart":{"lib/firebase_options.dart":{"projectId":"staging-pockeat","configurations":{"android":"1:350090383584:android:f2828874805d58473f0085","ios":"1:350090383584:ios:63bae819259c04763f0085","macos":"1:350090383584:ios:4cb7cdfacda9f5203f0085","web":"1:350090383584:web:7c334a163a4379bc3f0085","windows":"1:350090383584:web:e4631bbbcda1604c3f0085"}}}}},"firestore":{"rules":"firestore.rules","indexes":"firestore.indexes.json"},"emulators":{"auth":{"port":9099},"firestore":{"port":8080,"rules":"firestore.rules"},"ui":{"enabled":true,"port":4000},"singleProjectMode":true}}
