--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,7 @@ dependencies:
   instabug_flutter: ^14.1.0
   home_widget: ^0.7.0
   workmanager: ^0.5.2
+  firebase_performance: ^0.9.4+7
 
 dev_dependencies:
   flutter_test:
