--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ dependencies:
   home_widget: ^0.7.0
   workmanager: ^0.5.2
   firebase_performance: ^0.9.4+7
+  firebase_analytics: ^10.10.7
 
 dev_dependencies:
   flutter_test:
