--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,13 +86,28 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  flutter_lints: ^3.0.2
+  husky: ^0.1.7
+  lint_staged: ^0.5.1
+  import_sorter: ^4.6.0
   build_runner: ^2.3.3
+
+# Husky configuration
+husky:
+  pre-commit: dart run lint_staged
+
+# Lint staged configuration
+lint_staged:
+  "**/*.dart":
+    - dart format --set-exit-if-changed
+    - dart analyze --fatal-infos --fatal-warnings
+    - dart run import_sorter:main
+  "test/":
+    - flutter test
 
   # For information on the generic Dart part of this file, see the
   # following page: https://dart.dev/tools/pub/pubspec
 
-  # The following section is specific to Flutter packages.
   cloud_firestore_platform_interface: any
 flutter:
   assets:
