--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,8 @@ dependencies:
   workmanager: ^0.5.2
   firebase_performance: ^0.9.4+7
   firebase_analytics: ^10.10.7
+  lottie: ^3.3.1
+  flutter_launcher_icons: ^0.14.3 
 
 dependency_overrides:
   analyzer: 7.3.0
@@ -106,6 +108,11 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icons/app_icon.png"
+  min_sdk_android: 21
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
