--- a/.github/workflows/auto-update-changelog.yml
+++ b/.github/workflows/auto-update-changelog.yml
@@ -163,7 +163,7 @@ jobs:
           python update_changelog.py
         env:
           CLAUDE_API_KEY: ${{ secrets.CLAUDE_API_KEY }}
-          CLAUDE_MODEL: ${{ secrets.CLAUDE_MODEL || 'claude-3-opus-20240229-v1.0' }}
+          CLAUDE_MODEL: ${{ secrets.CLAUDE_MODEL || 'claude-3-7-sonnet-20250219' }}
           VERSION: ${{ steps.extract_version.outputs.VERSION }}
 
       - name: Create PR with changelog update
