--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,6 +80,7 @@ dependencies:
   path: any
   logger: any
   confetti: ^0.8.0
+  table_calendar: ^3.2.0
 dependency_overrides:
   analyzer: 7.3.0
 
